video fix on mobile

--- a/monity/css/styles.css
+++ b/monity/css/styles.css
@@ -8468,3 +8468,9 @@ footer .phone a:focus {
     -ms-hyphens: auto;
     hyphens: auto;
 }
+
+@media screen and (max-width: 425px) {
+    .herovideo{
+        left: -100% !important;
+    }
+}
